assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

::-webkit-scrollbar {
  width: 5px;
}

::-webkit-scrollbar-track {
  background-color: #f1f1f1;
}

::-webkit-scrollbar-thumb {
  background-color: #bbb;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #888;
}

html {
  overflow-y: overlay;
  overflow-x: hidden;
}

:root {
}

.triangle {
  border-style: solid;
  border-width: 0px 0px 6rem 6rem;
  border-color: transparent transparent transparent #6b7280;
}

@layer base {
  body {
    @apply bg-white dark:bg-gray-900 text-black dark:text-white;
  }
}

